infra/istio/destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dr-istio-ping
spec:
  host: ping.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
