infra/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-vs
spec:
  hosts:
    - "*"
  gateways:
    - grpc-gateway
  tcp:
  - match:
      - port: 80
    route:
    - destination:
        port:
           number: 80 
        host: ping.default.svc.cluster.local
        subset: v1
      weight: 100
